src/grammar/.antlr/BashParser.java
// Generated from /Users/I507145/Workspace/LKS/Terd/src/grammar/Bash.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class BashParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, WORD=42, NUMBER=43, NEWLINES=44, WS=45;
	public static final int
		RULE_command = 0, RULE_shellCommand = 1, RULE_forCommand = 2, RULE_selectCommand = 3, 
		RULE_caseCommand = 4, RULE_functionDef = 5, RULE_subShell = 6, RULE_ifCommand = 7, 
		RULE_groupCommand = 8, RULE_elifClause = 9, RULE_caseClause = 10, RULE_patternList = 11, 
		RULE_caseClauseSequence = 12, RULE_pattern = 13, RULE_list = 14, RULE_compoundList = 15, 
		RULE_list0 = 16, RULE_list1 = 17, RULE_listTerminator = 18, RULE_simpleList = 19, 
		RULE_simpleList1 = 20, RULE_pipelineCommand = 21, RULE_pipeline = 22, 
		RULE_timeOpt = 23, RULE_timeSpec = 24, RULE_simpleCommand = 25, RULE_redirectionList = 26, 
		RULE_simpleCommandElement = 27, RULE_redirection = 28, RULE_assignmentWord = 29, 
		RULE_wordList = 30;
	private static String[] makeRuleNames() {
		return new String[] {
			"command", "shellCommand", "forCommand", "selectCommand", "caseCommand", 
			"functionDef", "subShell", "ifCommand", "groupCommand", "elifClause", 
			"caseClause", "patternList", "caseClauseSequence", "pattern", "list", 
			"compoundList", "list0", "list1", "listTerminator", "simpleList", "simpleList1", 
			"pipelineCommand", "pipeline", "timeOpt", "timeSpec", "simpleCommand", 
			"redirectionList", "simpleCommandElement", "redirection", "assignmentWord", 
			"wordList"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'while'", "'do'", "'done'", "'until'", "'for'", "'{'", "'}'", 
			"';'", "'in'", "'select'", "'case'", "'esac'", "'('", "')'", "'function'", 
			"'if'", "'then'", "'fi'", "'else'", "'elif'", "';;'", "'|'", "'\n'", 
			"'&'", "'&&'", "'||'", "'!'", "'-p'", "'time'", "'>'", "'<'", "'>>'", 
			"'<<'", "'<&'", "'>&'", "'<<-'", "'-'", "'&>'", "'<>'", "'>|'", "'='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "WORD", "NUMBER", "NEWLINES", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Bash.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public BashParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class CommandContext extends ParserRuleContext {
		public SimpleCommandContext simpleCommand() {
			return getRuleContext(SimpleCommandContext.class,0);
		}
		public ShellCommandContext shellCommand() {
			return getRuleContext(ShellCommandContext.class,0);
		}
		public RedirectionListContext redirectionList() {
			return getRuleContext(RedirectionListContext.class,0);
		}
		public CommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_command; }
	}

	public final CommandContext command() throws RecognitionException {
		CommandContext _localctx = new CommandContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_command);
		try {
			setState(67);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(62);
				simpleCommand();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(63);
				shellCommand();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(64);
				shellCommand();
				setState(65);
				redirectionList();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ShellCommandContext extends ParserRuleContext {
		public ForCommandContext forCommand() {
			return getRuleContext(ForCommandContext.class,0);
		}
		public CaseCommandContext caseCommand() {
			return getRuleContext(CaseCommandContext.class,0);
		}
		public List<CompoundListContext> compoundList() {
			return getRuleContexts(CompoundListContext.class);
		}
		public CompoundListContext compoundList(int i) {
			return getRuleContext(CompoundListContext.class,i);
		}
		public SelectCommandContext selectCommand() {
			return getRuleContext(SelectCommandContext.class,0);
		}
		public IfCommandContext ifCommand() {
			return getRuleContext(IfCommandContext.class,0);
		}
		public SubShellContext subShell() {
			return getRuleContext(SubShellContext.class,0);
		}
		public GroupCommandContext groupCommand() {
			return getRuleContext(GroupCommandContext.class,0);
		}
		public FunctionDefContext functionDef() {
			return getRuleContext(FunctionDefContext.class,0);
		}
		public ShellCommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_shellCommand; }
	}

	public final ShellCommandContext shellCommand() throws RecognitionException {
		ShellCommandContext _localctx = new ShellCommandContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_shellCommand);
		try {
			setState(88);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__4:
				enterOuterAlt(_localctx, 1);
				{
				setState(69);
				forCommand();
				}
				break;
			case T__10:
				enterOuterAlt(_localctx, 2);
				{
				setState(70);
				caseCommand();
				}
				break;
			case T__0:
				enterOuterAlt(_localctx, 3);
				{
				setState(71);
				match(T__0);
				setState(72);
				compoundList();
				setState(73);
				match(T__1);
				setState(74);
				compoundList();
				setState(75);
				match(T__2);
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 4);
				{
				setState(77);
				match(T__3);
				setState(78);
				compoundList();
				setState(79);
				match(T__1);
				setState(80);
				compoundList();
				setState(81);
				match(T__2);
				}
				break;
			case T__9:
				enterOuterAlt(_localctx, 5);
				{
				setState(83);
				selectCommand();
				}
				break;
			case T__15:
				enterOuterAlt(_localctx, 6);
				{
				setState(84);
				ifCommand();
				}
				break;
			case T__12:
				enterOuterAlt(_localctx, 7);
				{
				setState(85);
				subShell();
				}
				break;
			case T__5:
				enterOuterAlt(_localctx, 8);
				{
				setState(86);
				groupCommand();
				}
				break;
			case T__14:
			case WORD:
				enterOuterAlt(_localctx, 9);
				{
				setState(87);
				functionDef();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ForCommandContext extends ParserRuleContext {
		public TerminalNode WORD() { return getToken(BashParser.WORD, 0); }
		public List<TerminalNode> NEWLINES() { return getTokens(BashParser.NEWLINES); }
		public TerminalNode NEWLINES(int i) {
			return getToken(BashParser.NEWLINES, i);
		}
		public CompoundListContext compoundList() {
			return getRuleContext(CompoundListContext.class,0);
		}
		public WordListContext wordList() {
			return getRuleContext(WordListContext.class,0);
		}
		public ListTerminatorContext listTerminator() {
			return getRuleContext(ListTerminatorContext.class,0);
		}
		public ForCommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_forCommand; }
	}

	public final ForCommandContext forCommand() throws RecognitionException {
		ForCommandContext _localctx = new ForCommandContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_forCommand);
		try {
			setState(142);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(90);
				match(T__4);
				setState(91);
				match(WORD);
				setState(92);
				match(NEWLINES);
				setState(93);
				match(T__1);
				setState(94);
				compoundList();
				setState(95);
				match(T__2);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(97);
				match(T__4);
				setState(98);
				match(WORD);
				setState(99);
				match(NEWLINES);
				setState(100);
				match(T__5);
				setState(101);
				compoundList();
				setState(102);
				match(T__6);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(104);
				match(T__4);
				setState(105);
				match(WORD);
				setState(106);
				match(T__7);
				setState(107);
				match(NEWLINES);
				setState(108);
				match(T__1);
				setState(109);
				compoundList();
				setState(110);
				match(T__2);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(112);
				match(T__4);
				setState(113);
				match(WORD);
				setState(114);
				match(T__7);
				setState(115);
				match(NEWLINES);
				setState(116);
				match(T__5);
				setState(117);
				compoundList();
				setState(118);
				match(T__6);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(120);
				match(T__4);
				setState(121);
				match(WORD);
				setState(122);
				match(NEWLINES);
				setState(123);
				match(T__8);
				setState(124);
				wordList();
				setState(125);
				listTerminator();
				setState(126);
				match(NEWLINES);
				setState(127);
				match(T__1);
				setState(128);
				compoundList();
				setState(129);
				match(T__2);
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(131);
				match(T__4);
				setState(132);
				match(WORD);
				setState(133);
				match(NEWLINES);
				setState(134);
				match(T__8);
				setState(135);
				wordList();
				setState(136);
				listTerminator();
				setState(137);
				match(NEWLINES);
				setState(138);
				match(T__5);
				setState(139);
				compoundList();
				setState(140);
				match(T__6);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SelectCommandContext extends ParserRuleContext {
		public TerminalNode WORD() { return getToken(BashParser.WORD, 0); }
		public List<TerminalNode> NEWLINES() { return getTokens(BashParser.NEWLINES); }
		public TerminalNode NEWLINES(int i) {
			return getToken(BashParser.NEWLINES, i);
		}
		public ListContext list() {
			return getRuleContext(ListContext.class,0);
		}
		public WordListContext wordList() {
			return getRuleContext(WordListContext.class,0);
		}
		public ListTerminatorContext listTerminator() {
			return getRuleContext(ListTerminatorContext.class,0);
		}
		public SelectCommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selectCommand; }
	}

	public final SelectCommandContext selectCommand() throws RecognitionException {
		SelectCommandContext _localctx = new SelectCommandContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_selectCommand);
		try {
			setState(196);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(144);
				match(T__9);
				setState(145);
				match(WORD);
				setState(146);
				match(NEWLINES);
				setState(147);
				match(T__1);
				setState(148);
				list();
				setState(149);
				match(T__2);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(151);
				match(T__9);
				setState(152);
				match(WORD);
				setState(153);
				match(NEWLINES);
				setState(154);
				match(T__5);
				setState(155);
				list();
				setState(156);
				match(T__6);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(158);
				match(T__9);
				setState(159);
				match(WORD);
				setState(160);
				match(T__7);
				setState(161);
				match(NEWLINES);
				setState(162);
				match(T__1);
				setState(163);
				list();
				setState(164);
				match(T__2);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(166);
				match(T__9);
				setState(167);
				match(WORD);
				setState(168);
				match(T__7);
				setState(169);
				match(NEWLINES);
				setState(170);
				match(T__5);
				setState(171);
				list();
				setState(172);
				match(T__6);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(174);
				match(T__9);
				setState(175);
				match(WORD);
				setState(176);
				match(NEWLINES);
				setState(177);
				match(T__8);
				setState(178);
				wordList();
				setState(179);
				listTerminator();
				setState(180);
				match(NEWLINES);
				setState(181);
				match(T__1);
				setState(182);
				list();
				setState(183);
				match(T__2);
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(185);
				match(T__9);
				setState(186);
				match(WORD);
				setState(187);
				match(NEWLINES);
				setState(188);
				match(T__8);
				setState(189);
				wordList();
				setState(190);
				listTerminator();
				setState(191);
				match(NEWLINES);
				setState(192);
				match(T__5);
				setState(193);
				list();
				setState(194);
				match(T__6);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CaseCommandContext extends ParserRuleContext {
		public TerminalNode WORD() { return getToken(BashParser.WORD, 0); }
		public List<TerminalNode> NEWLINES() { return getTokens(BashParser.NEWLINES); }
		public TerminalNode NEWLINES(int i) {
			return getToken(BashParser.NEWLINES, i);
		}
		public WordListContext wordList() {
			return getRuleContext(WordListContext.class,0);
		}
		public CaseClauseSequenceContext caseClauseSequence() {
			return getRuleContext(CaseClauseSequenceContext.class,0);
		}
		public CaseClauseContext caseClause() {
			return getRuleContext(CaseClauseContext.class,0);
		}
		public CaseCommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_caseCommand; }
	}

	public final CaseCommandContext caseCommand() throws RecognitionException {
		CaseCommandContext _localctx = new CaseCommandContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_caseCommand);
		try {
			setState(220);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(198);
				match(T__10);
				setState(199);
				match(WORD);
				setState(200);
				match(NEWLINES);
				setState(201);
				match(T__8);
				setState(202);
				wordList();
				setState(203);
				match(T__11);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(205);
				match(T__10);
				setState(206);
				match(WORD);
				setState(207);
				match(NEWLINES);
				setState(208);
				match(T__8);
				setState(209);
				caseClauseSequence(0);
				setState(210);
				match(NEWLINES);
				setState(211);
				match(T__11);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(213);
				match(T__10);
				setState(214);
				match(WORD);
				setState(215);
				match(NEWLINES);
				setState(216);
				match(T__8);
				setState(217);
				caseClause();
				setState(218);
				match(T__11);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionDefContext extends ParserRuleContext {
		public TerminalNode WORD() { return getToken(BashParser.WORD, 0); }
		public TerminalNode NEWLINES() { return getToken(BashParser.NEWLINES, 0); }
		public GroupCommandContext groupCommand() {
			return getRuleContext(GroupCommandContext.class,0);
		}
		public FunctionDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDef; }
	}

	public final FunctionDefContext functionDef() throws RecognitionException {
		FunctionDefContext _localctx = new FunctionDefContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_functionDef);
		try {
			setState(237);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(222);
				match(WORD);
				setState(223);
				match(T__12);
				setState(224);
				match(T__13);
				setState(225);
				match(NEWLINES);
				setState(226);
				groupCommand();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(227);
				match(T__14);
				setState(228);
				match(WORD);
				setState(229);
				match(T__12);
				setState(230);
				match(T__13);
				setState(231);
				match(NEWLINES);
				setState(232);
				groupCommand();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(233);
				match(T__14);
				setState(234);
				match(WORD);
				setState(235);
				match(NEWLINES);
				setState(236);
				groupCommand();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SubShellContext extends ParserRuleContext {
		public CompoundListContext compoundList() {
			return getRuleContext(CompoundListContext.class,0);
		}
		public SubShellContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subShell; }
	}

	public final SubShellContext subShell() throws RecognitionException {
		SubShellContext _localctx = new SubShellContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_subShell);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(239);
			match(T__12);
			setState(240);
			compoundList();
			setState(241);
			match(T__13);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfCommandContext extends ParserRuleContext {
		public List<CompoundListContext> compoundList() {
			return getRuleContexts(CompoundListContext.class);
		}
		public CompoundListContext compoundList(int i) {
			return getRuleContext(CompoundListContext.class,i);
		}
		public ElifClauseContext elifClause() {
			return getRuleContext(ElifClauseContext.class,0);
		}
		public IfCommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifCommand; }
	}

	public final IfCommandContext ifCommand() throws RecognitionException {
		IfCommandContext _localctx = new IfCommandContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_ifCommand);
		try {
			setState(264);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(243);
				match(T__15);
				setState(244);
				compoundList();
				setState(245);
				match(T__16);
				setState(246);
				compoundList();
				setState(247);
				match(T__17);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(249);
				match(T__15);
				setState(250);
				compoundList();
				setState(251);
				match(T__16);
				setState(252);
				compoundList();
				setState(253);
				match(T__18);
				setState(254);
				compoundList();
				setState(255);
				match(T__17);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(257);
				match(T__15);
				setState(258);
				compoundList();
				setState(259);
				match(T__16);
				setState(260);
				compoundList();
				setState(261);
				elifClause();
				setState(262);
				match(T__17);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GroupCommandContext extends ParserRuleContext {
		public ListContext list() {
			return getRuleContext(ListContext.class,0);
		}
		public GroupCommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_groupCommand; }
	}

	public final GroupCommandContext groupCommand() throws RecognitionException {
		GroupCommandContext _localctx = new GroupCommandContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_groupCommand);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(266);
			match(T__5);
			setState(267);
			list();
			setState(268);
			match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ElifClauseContext extends ParserRuleContext {
		public List<CompoundListContext> compoundList() {
			return getRuleContexts(CompoundListContext.class);
		}
		public CompoundListContext compoundList(int i) {
			return getRuleContext(CompoundListContext.class,i);
		}
		public ElifClauseContext elifClause() {
			return getRuleContext(ElifClauseContext.class,0);
		}
		public ElifClauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_elifClause; }
	}

	public final ElifClauseContext elifClause() throws RecognitionException {
		ElifClauseContext _localctx = new ElifClauseContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_elifClause);
		try {
			setState(288);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(270);
				match(T__19);
				setState(271);
				compoundList();
				setState(272);
				match(T__16);
				setState(273);
				compoundList();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(275);
				match(T__19);
				setState(276);
				compoundList();
				setState(277);
				match(T__16);
				setState(278);
				compoundList();
				setState(279);
				match(T__18);
				setState(280);
				compoundList();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(282);
				match(T__19);
				setState(283);
				compoundList();
				setState(284);
				match(T__16);
				setState(285);
				compoundList();
				setState(286);
				elifClause();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CaseClauseContext extends ParserRuleContext {
		public PatternListContext patternList() {
			return getRuleContext(PatternListContext.class,0);
		}
		public CaseClauseSequenceContext caseClauseSequence() {
			return getRuleContext(CaseClauseSequenceContext.class,0);
		}
		public CaseClauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_caseClause; }
	}

	public final CaseClauseContext caseClause() throws RecognitionException {
		CaseClauseContext _localctx = new CaseClauseContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_caseClause);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(291);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				{
				setState(290);
				caseClauseSequence(0);
				}
				break;
			}
			setState(293);
			patternList();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PatternListContext extends ParserRuleContext {
		public List<TerminalNode> NEWLINES() { return getTokens(BashParser.NEWLINES); }
		public TerminalNode NEWLINES(int i) {
			return getToken(BashParser.NEWLINES, i);
		}
		public PatternContext pattern() {
			return getRuleContext(PatternContext.class,0);
		}
		public CompoundListContext compoundList() {
			return getRuleContext(CompoundListContext.class,0);
		}
		public PatternListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_patternList; }
	}
